<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/demoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnDTR"
        android:id="@+id/checkBoxDTR" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnRTS"
        android:id="@+id/checkBoxRTS" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/input"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/repeat"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editRepeat"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:ems="10"
            android:inputType="number"
            android:text="@string/repeat_default"/>

        <TextView
            android:id="@+id/tv_tooltip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/repeat_msg"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/delay"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editDelay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/delay_default"/>

        <TextView
            android:id="@+id/tv_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/milliseconds"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>

    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <TextView
            android:id="@+id/consoleText"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </ScrollView>

</LinearLayout>
